# code

Django/bookmark/: db.sqlite3  pyproject.toml
Django/bookmark/bookmark/: admin.py  models.py  views.py
Django/bookmark/bookmark/migrations/: 0001_initial.py
Django/bookmark/config/: settings.py  urls.py
Django/bookmark/mysite/mysite/: settings.py
Django/bookmark/templates/: book_detail.html  book_list.html  bookmark_detail.html  bookmark_list.html  gugu.html  movie.html  movies.html
Django/pystagram/: db.sqlite3  pyproject.toml
Django/pystagram/config/: settings.py  urls.py
Django/pystagram/member/: admin.py  forms.py  models.py  oauth_urls.py  oauth_views.py  urls.py  views.py
Django/pystagram/member/migrations/: 0001_initial.py  0002_userfollowing_user_following.py  0003_alter_userfollowing_options_and_more.py
Django/pystagram/post/: admin.py  comment_urls.py  comment_views.py  forms.py  models.py  views.py
Django/pystagram/post/migrations/: 0001_initial.py  0002_rename_image_postimage_image_alter_postimage_post_and_more.py  0003_like.py
Django/pystagram/post/templatetags/: custom_tag.py
Django/pystagram/static/css/: bootstrap-grid.min.css.map  bootstrap-reboot.css  bootstrap-reboot.css.map  bootstrap-reboot.min.css  bootstrap-reboot.min.css.map  bootstrap-reboot.rtl.min.css.map  bootstrap-utilities.min.css  bootstrap-utilities.min.css.map  bootstrap-utilities.rtl.css  bootstrap-utilities.rtl.css.map  bootstrap.css.map  bootstrap.rtl.min.css  bootstrap.rtl.min.css.map  style.css
Django/pystagram/static/js/: bootstrap.esm.min.js.map  jquery.formset.js
Django/pystagram/templates/: base.html
Django/pystagram/templates/auth/: email_verified_done.html  login.html  nickname.html  not_verified.html  signup.html  signup_done.html
Django/pystagram/templates/include/: form.html  search_form.html
Django/pystagram/templates/post/: form.html  list.html
Django/pystagram/templates/profile/: detail.html
Django/pystagram/templates/search/: search.html  search_tag.html  search_user.html
Django/pystagram/utils/: email.py  forms.py  models.py
Django/rest_blog/: .python-version  db.sqlite3  pyproject.toml
Django/rest_blog/blog/: admin.py  models.py  serializers.py
Django/rest_blog/blog/tests/: model_test.py  view_test.py
Django/rest_blog/blog/urls/: api_urls.py  generics_urls.py  view_set_urls.py
Django/rest_blog/blog/views/: api_vews.py  api_view_set_views.py  generics_views.py  views.py
Django/rest_blog/config/: local.py  prod.py  schema.py  urls.py
Django/rest_blog/user/: serializers.py  views.py
Django/rest_blog/utils/: jwt_serializers.py  permissions.py
Django/task/: .gitignore  db.sqlite3  pyproject.toml
Django/task/config/: settings.py  urls.py
Django/task/static/css/: bootstrap-grid.css.map  bootstrap-grid.rtl.css.map  bootstrap-reboot.rtl.css  bootstrap-reboot.rtl.css.map  bootstrap-utilities.css  bootstrap.css  (+1 more)
Django/task/templates/: base.html  login.html  pagination.html  signup.html  todo_form.html  todo_info.html  todo_list.html  todo_update.html
Django/task/todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
Django/task/users/: views.py
live/djangostudy/blog_api/: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  manage.py  pyproject.toml
(+178 files in other folders)
