[project]
name = "oz-bookmark"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12.2,<3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
